# Pokemon

./: CMakeCache.txt  CMakeLists.txt  Pokemon.cc  cmake_install.cmake
src/: CMakeLists.txt  battle.h  battleController.cpp  battleController.h  battleSpot.h  event.h  main.cc  player.h  playerController.h  pokemon.h  pokemonTypes.h
src/effect/: effect.h  fire.cpp  fire.h
src/move/: CMakeLists.txt  move.h
src/playerInput/: cmdPlayerInput.h  playerInput.h
src/pokemon/: chimchar.h
src/pokemons/: chimchar.h
